...
  onToggleTerm,
  onSubmit,
  onBack,
  isLoading,
  isDisabled,
  entity,
  buttonText = "Create my account",
  hideBackButton = false,
  customTermsRenderer,
  additionalContent,
}: TermsAndConditionsFormProps) => {
  const { updateModal } = useModalStore();

  return (
    <View>
      <Text style={termsAndConditionsStyles.title}>Accept terms and conditions</Text>

      {additionalContent}

      <View style={termsAndConditionsStyles.termsContainer}>
        {termsList.map((item, idx) => {
          const key = `term-${Date.now()}-${idx}`;
...
