...

    return (
      <TouchableOpacity
        activeOpacity={1}
        style={tw`flex flex-col pb-[20px]`}
        onPress={() => navigation.push(screenName.artwork, { art_id, url })}
        testID="artwork-card"
      >
        <View style={tw`relative`}>
          <ArtworkImage
            imageWidth={displayWidth}
            image_href={image_href}
            galleryView={galleryView}
...
