...
            setFormErrors(prev => ({...prev, [label]: ''}));
        }
    };

    return (
        <View style={styles.container}>
            <Text style={styles.titleHeader}>Shipping Details</Text>
            <View style={styles.shippingDetailsContainer}>
                <Text style={{fontSize: 16, fontWeight: 500, color: colors.grey}}>Delivery Mode</Text>
                <View style={styles.pickerContainer}>
                    {deliveryOptions.map((option, index) => (
                        <CustomPicker name={option} onPress={() => setDeliveryMode(option as deliveryModeTypes)}  isSelected={option === deliveryMode} key={index} />
                    ))}
...
