...
    return (
        <View style={styles.summaryContainer}>
            <Text style={styles.summaryText}>Summary</Text>
            <View style={styles.priceListing}>
                <View style={styles.priceListingItem}>
                    <Text style={{fontSize: 14, color: '#616161', flex: 1}}>Price</Text>
                    <Text style={{fontSize: 14, fontWeight: '500', color: '#616161'}}>{price ? formatPrice(price) : 'Request price'}</Text>
                </View>
                <View style={styles.priceListingItem}>
                    <Text style={{fontSize: 14, color: '#616161', flex: 1}}>Shipping</Text>
                    <Text style={{fontSize: 14, fontWeight: '500', color: '#616161'}}>To be calculated</Text>
                </View>
                <View style={styles.priceListingItem}>
...
