export const screenName = {
  welcome: "Welcome",
  login: "Login",
  register: "Register",
  forgotPassword: "Forgot-password",
  changePassword: "change-password",
  searchResults: "Search",
  verifyEmail: "verify-email",
  home: "Home",
  artwork: "Artwork",
  arPreview: "ar-preview",
  catalogListing: "Catalog-listing",
  artworks: "Artworks",
  orders: "Orders",
  ordersListing: "orders-listing",
  purchaseArtwork: "purchase-artwork",
  payment: "payment",
  profileScreen: "profile-screen",
  profile: "Profile",
  editProfile: "edit-profile",
  savedArtworks: "saved-artworks",
  filter: "filter",
  artworkMediumFilterModal: "artwork-medium-filter-modal",
  artworkCategoriesFilterModal: "artwork-categories-filter-modal",
  notifications: "notifications",
  collections: "collections",
  editorial: "editorial",
  cancleOrderPayment: "CancleOrderPayment",
  successOrderPayment: "SuccessOrderPayment",
  checkout: "checkout",
  connectStripe: "connect-stripe",
  artworksMedium: "artworks-medium",
  artworkCategories: "artwork-categories",
  verifyTransaction: "verify-transaction",
  deleteAccount: "delete-account",
  biometricSettings: "biometric-settings",
  supportTickets: "support-tickets",
  supportTicketsFilterModal: "support-tickets-filter-modal",
  artist: {
    wallet: "Wallet",
    reviewHub: "Review",
    proposalPrice: "proposal-price",
  },
  individual: {
    shows: "individual-shows",
    showDetails: "individual-show-details",
    fairsEvents: "individual-fairs-events",
    fairEventDetails: "individual-fair-event-details",
    galleries: "individual-galleries",
    galleryDetails: "individual-gallery-details",
    artistDetails: "individual-artist-details",
    allArtists: "individual-all-artists",
  },
  gallery: {
    overview: "Overview",
    artworks: "Artworks",
    more: "More",
    artistRoster: "Artist Roster",
    addArtistToRoster: "add-artist-to-roster",
    showsFairsEvents: "Shows, Fairs & Events",
    showsFairsEventDetails: "shows-fairs-event-details",
    createGalleryEvent: "create-gallery-event",
    uploadArtwork: "upload-artwork",
    uploadNewLogo: "upload-new-gallery-logo",
    orders: "Orders",
    profile: "Profile",
    editProfile: "edit-profile",
    billing: "billing-plans",
    subscriptions: "Billing",
    order: "gallery-order",
    stripePayouts: "Payouts",
    editArtwork: "edit-artwork",
    changeBillingCard: "change-billing-card",
  },
};
